[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sementic"
version = "0.1.0"
description = "LLM-based collaboration planner for multi-agent orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.10.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "temporalio>=1.28.0,<2.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "fakeredis>=2.23.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
sementic-plan = "sementic.cli:main"
sementic-api = "sementic.server:main"
sementic-worker = "sementic.worker_main:main"
sementic-gateway = "sementic.gateway.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sementic", "src/maos_runtime"]

[tool.hatch.build.targets.wheel.force-include]
"src/sementic/maos_observer/static" = "sementic/maos_observer/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
